# k8s-provider

./: .gitignore  Cargo.toml  README.md  provider.k
.github/workflows/: release.yml
docs/: getting-started.md  installation.md
docs/services/: api.md  apis.md  apis_admissionregistration.md  apis_apiextensions.md  apis_apiregistration.md  apis_apps.md  apis_authentication.md  apis_authorization.md  apis_autoscaling.md  apis_batch.md  apis_certificates.md  apis_coordination.md  apis_events.md  apis_flowcontrol.md  apis_internal.md  apis_networking.md  apis_node.md  apis_policy.md  apis_rbac.md  apis_resource.md  apis_scheduling.md  apis_storage.md  apis_storagemigration.md  logs.md  openid.md  version.md
src/: lib.rs  mod.rs
src/admissionregistration/: mod.rs
src/api/: mod.rs
src/api_openapi/: mod.rs
src/apiextensions/: mod.rs
src/apiregistration/: mod.rs
src/apis/: mod.rs
src/apis_admissionregistration/: mod.rs
src/apis_apiextensions/: mod.rs
src/apis_apiregistration/: mod.rs
src/apis_apps/: mod.rs
src/apis_authentication/: mod.rs
src/apis_authorization/: mod.rs
src/apis_autoscaling/: mod.rs
src/apis_batch/: mod.rs
src/apis_certificates/: mod.rs
src/apis_coordination/: mod.rs
src/apis_events/: mod.rs
src/apis_flowcontrol/: mod.rs
src/apis_internal/: mod.rs
src/apis_networking/: mod.rs
src/apis_node/: mod.rs
src/apis_policy/: mod.rs
src/apis_rbac/: mod.rs
src/apis_resource/: mod.rs
src/apis_scheduling/: mod.rs
src/apis_storage/: mod.rs
src/apis_storagemigration/: mod.rs
src/apps/: mod.rs
src/apps_v1/: mod.rs
(+336 files in other folders)
